결재 대기중 페이지에 DB 에 들어있는 데이터를 가져와서 리스트로 뿌려주는 기능 구현. 조사 결과 Modal 창을 띄우면 Survey Result 의 내용을 받아와서 상세보기 기능 구현.